--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "dotenv": "^14.3.2",
     "firebase": "^9.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
