--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:5000/",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -12,12 +13,12 @@
     "dotenv": "^14.3.2",
     "firebase": "^9.0.2",
     "react": "^17.0.2",
+    "react-device-detect": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-material-ui-carousel": "^2.3.1",
     "react-multi-carousel": "^2.6.5",
     "react-otp-input": "^2.4.0",
     "react-redux": "^7.2.5",
-    "react-responsive": "^9.0.0-beta.5",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "react-toastify": "^8.0.2",
